--- a/2d_gaus_test.ipynb
+++ b/2d_gaus_test.ipynb
@@ -302,6 +302,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "conda activate "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
@@ -321,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.18"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
